--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "clone-deep": "^0.3.0",
     "enquirer": "^1.0.2",
     "fs": "0.0.1-security",
+    "i": "^0.3.6",
+    "getos": "^3.2.1",
     "mocha": "^3.4.2",
+    "npm": "^6.14.11",
     "prompt-checkbox": "^2.2.0",
     "prompt-question": "^5.0.0",
     "prompt-text": "^1.1.0",
